# Homework

./: README.md  _config.yml  bubble_sort.py  coins  eratosphen_alg.py  index.md
.github/workflows/: build-and-lint.yml  python-tests.yaml  test.yaml  tests.yaml  tests.yml
08.09.2025/: bite code  coins.py  reversed_compare.py  reversed_strings.py  Документ Microsoft Word.docx
HomeWork C/: Stack+Correct string.c  Stack+Deykstra_alg.c
HomeWork C/01.12.2025/: bin_summarize.c  double.c
HomeWork C/06.10.2025/: instruction.txt  main.c  sort.s
HomeWork C/09.10.2025/: algorithm_diff.txt  bit_solution.py  iterative_solution.py  recursive_solution.py
HomeWork C/10.11.2025/HW3/: CMakeLists.txt  correct_string.c  count_0.c  count_occ.c
HomeWork C/10.11.2025/HW5/: CMakeLists.txt  correct_string.c  deykstra_alg.c  stack.c  stack.h
HomeWork C/10.11.2025/corr_string_and_deykstra/: CMakeLists.txt
HomeWork C/15.12.2025/: bin_move.c  palindrom.c
HomeWork C/16.10.2025/: correct_string2.c
HomeWork C/18.11.2025/: CMakeLists.txt  array_operations.c  array_operations.h  main.c  tests_array.c  tests_array.h
HomeWork C/23.10.2025/: correct_string.c  stack.c  stack.h
HomeWork C/25.09.2025/: correct_string.c  lucky_numbers.c  swap_array.c  the remainder of the division.c  two multiplications  two_multiplications.c
HomeWork C/26.10.2025/: curring_uncurring.c
HomeWork C/28.10.2025/: Warriors.c  dialog_array.c
HomeWork C/CW2/: Queue.c  (+1 more)
HomeWork Python/: Huffman_code.py
control_work_20.10.2025/: fibb_num.c  max_bin_summ.c  selection_sort.c
tests/: test_euclid.py
(+21 files in other folders)
